// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test PathInput should render correctly 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="btn"
      title="Choose Folder"
    >
      <img
        src="img/right-panel/icon-import.svg"
      />
    </div>
    <input
      class="ant-input css-dev-only-do-not-override-hash ant-input-outlined ant-input-status-error"
      id="location-input"
      type="text"
      value="defaultFolder"
    />
  </div>
</div>
`;

exports[`test PathInput should render correctly 2`] = `
<div>
  <div
    class="container"
  >
    <div
      class="btn"
      title="Choose Folder"
    >
      <img
        src="img/right-panel/icon-import.svg"
      />
    </div>
    <input
      class="ant-input css-dev-only-do-not-override-hash ant-input-outlined ant-input-status-error"
      id="location-input"
      type="text"
      value="defaultFolder"
    />
  </div>
</div>
`;

exports[`test PathInput should render correctly 3`] = `
<div>
  <div
    class="container"
  >
    <div
      class="btn"
      title="Choose Folder"
    >
      <img
        src="img/right-panel/icon-import.svg"
      />
    </div>
    <input
      class="ant-input css-dev-only-do-not-override-hash ant-input-outlined ant-input-status-error"
      id="location-input"
      type="text"
      value="myDocuments"
    />
  </div>
</div>
`;
